# saka-cli

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  build.spec  hook-pyhako.py  hook-pysaka.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_cli.yml  test.yml
docs/: DEVELOPMENT.md
scripts/: build_local.py  build_windows.bat  rthook_encoding.py  test_build.py  verify_build.py
src/pyhako_cli/: cli.py  logging_setup.py  strings.py
src/saka_cli/: cli.py  logging_setup.py  strings.py
tests/: test_cli.py  test_cli_secure.py  test_cli_snapshots.py  test_critical_paths.py
tests/__snapshots__/: test_cli_snapshots.ambr
