[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saka-cli"
version = "0.1.1"
description = "CLI for pysaka"
requires-python = ">=3.9"
dependencies = [
    "tqdm>=4.66.0",
    "aiofiles>=23.0.0",
    "pysaka>=0.1.1",
    "structlog>=24.1.0",
    "keyrings-alt>=5.0.2",
]

[tool.uv.sources]
pysaka = { path = "../pysaka", editable = true }

[project.scripts]
saka-cli = "saka_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/saka_cli"]

[dependency-groups]
dev = [
    "browser-cookie3>=0.20.1",
    "mypy>=1.19.1",
    "pyinstaller>=6.17.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "syrupy>=4.9.1",
    "time-machine>=2.19.0",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
check_untyped_defs = false
disallow_untyped_defs = false
